[gd_scene load_steps=8 format=3 uid="uid://b4o1i3xhga4g6"]

[ext_resource type="Script" uid="uid://sb3ptr5dk8lv" path="res://player.gd" id="1_0e48y"]
[ext_resource type="Texture2D" uid="uid://smutxgplx54h" path="res://Art/space_background_pack/space_background_pack/Assets/Blue Version/blue-preview.png" id="1_epypp"]
[ext_resource type="Script" uid="uid://c7yt6hjv8bdjl" path="res://main.gd" id="1_q6r6c"]
[ext_resource type="Texture2D" uid="uid://3udrb3c2tfpm" path="res://Art/Foozle_2DS0011_Void_MainShip/Foozle_2DS0011_Void_MainShip/Main Ship/Main Ship - Bases/PNGs/Main Ship - Base - Full health.png" id="2_epypp"]
[ext_resource type="PackedScene" uid="uid://c14oxegewnrk1" path="res://sc√®nes/mob.tscn" id="2_kdubu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0hol4"]
radius = 16.0312

[sub_resource type="Curve2D" id="Curve2D_d21ai"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 40, 0, 0, 0, 0, 0, 296)
}
point_count = 2

[node name="main" type="Node2D"]
script = ExtResource("1_q6r6c")
mob_scene = ExtResource("2_kdubu")
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1155.0
offset_bottom = 649.0
texture = ExtResource("1_epypp")

[node name="Player" type="Area2D" parent="."]
script = ExtResource("1_0e48y")

[node name="Player" type="Sprite2D" parent="Player"]
texture = ExtResource("2_epypp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_0hol4")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(570, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_d21ai")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(0, 40)
rotation = 1.5708

[connection signal="body_entered" from="Player" to="Player" method="_on_body_entered"]
[connection signal="hit" from="Player" to="." method="Game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
